# palautusrepositorio

./: PULL.md  README.md  uusifeature.txt
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: player_reader.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/: pyproject.toml
viikko2/git-branch-harjoitus/: summa.py
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/webcounter/: interactive_console_output.xml  log.html  output.xml  report.html  run_robot_tests.sh
viikko3/webcounter/src/: app.py
viikko3/webcounter/src/templates/: index.html
viikko3/webcounter/src/tests/: reset.robot  resource.robot
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
