[tool.poetry]
name = "viikko2tehtava"
version = "0.1.0"
description = ""
authors = ["Ilari Ranin <raninilari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
tomli = "^2.0.2"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
